@@ -1,13 +1,15 @@
 package app.bpartners.geojobs.service;
 
+import static java.time.Instant.now;
+import static java.util.UUID.randomUUID;
+
 import app.bpartners.geojobs.model.exception.BadRequestException;
 import app.bpartners.geojobs.model.security.ApiKey;
 import app.bpartners.geojobs.repository.CommunityAuthorizationRepository;
 import app.bpartners.geojobs.repository.model.community.CommunityAuthorization;
+import app.bpartners.geojobs.repository.model.community.CommunityAuthorizationApiKey;
 import app.bpartners.geojobs.service.dashboard.UserAccountsApi;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
@@ -27,42 +29,53 @@ public class ApiKeyService {
   }
 
   public List<ApiKey> generateApiKeys(List<CommunityAuthorization> authorizations) {
-    validateAuthorizations(authorizations);
+    for (CommunityAuthorization auth : authorizations) {
+      if (communityAuthorizationRepository.findByEmail(auth.getEmail()).isPresent()) {
+        throw new BadRequestException("Email=" + auth.getEmail() + " is already used");
+      }
+    }
 
-    authorizations.forEach(
+    var communityAuthorizations = handleExistingCommunities(authorizations);
+
+    communityAuthorizations.forEach(
         authorization -> {
           var dashboardUserApiKey =
-              userAccountsApi.updateApiKey(
+              userAccountsApi.getOrGenerateApiKey(
                   authorization.getEmail(), authorization.getApiKey(), adminApiKey);
-          authorization.setApiKey(dashboardUserApiKey.key());
+          authorization.setDashboardApiKey(dashboardUserApiKey.key());
         });
 
     return communityAuthorizationRepository.saveAll(authorizations).stream()
         .map(
             communityAuthorization ->
                 new ApiKey(
-                    communityAuthorization.getApiKey(),
-                    communityAuthorization.getCreationDatetime()))
-        .collect(Collectors.toList());
+                    communityAuthorization.getMostRecentApiKey().getKeyValue(),
+                    communityAuthorization.getMostRecentApiKey().getCreationDatetime()))
+        .toList();
   }
 
-  private void validateAuthorizations(List<CommunityAuthorization> authorizations) {
-    var exceptionMessages =
-        authorizations.stream()
-            .map(
-                communityAuthorization -> {
-                  var optionalCommunityAuthorization =
-                      communityAuthorizationRepository.findByEmail(
-                          communityAuthorization.getEmail());
-                  if (optionalCommunityAuthorization.isPresent()) {
-                    return "Email=" + communityAuthorization.getEmail() + " is already used";
-                  }
-                  return null;
-                })
-            .filter(Objects::nonNull)
-            .toList();
-    if (!exceptionMessages.isEmpty()) {
-      throw new BadRequestException(String.join(". ", exceptionMessages));
-    }
+  private List<CommunityAuthorization> handleExistingCommunities(
+      List<CommunityAuthorization> authorizations) {
+    return authorizations.stream()
+        .map(
+            newCommunity -> {
+              var optionalCommunityAuthorization =
+                  communityAuthorizationRepository.findByEmail(newCommunity.getEmail());
+              if (optionalCommunityAuthorization.isPresent()) {
+                var existingCommunity = optionalCommunityAuthorization.get();
+                existingCommunity
+                    .getApiKeys()
+                    .add(
+                        CommunityAuthorizationApiKey.builder()
+                            .id(randomUUID().toString())
+                            .keyValue(newCommunity.getApiKey())
+                            .communityOwnerId(existingCommunity.getId())
+                            .creationDatetime(now())
+                            .build());
+                return existingCommunity;
+              }
+              return newCommunity;
+            })
+        .toList();
   }
 }
